Adicionado no documento html a partir da linha 18 , nav bar contendo classes e id para melhorias futuras no css , e também adicionei na linha 19 em diante a tag ul com listas contendo descrições do pokémon

--- a/index.html
+++ b/index.html
@@ -4,14 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Menu Lateral</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./src/styles/script.css" />
+    <title>Menu Lateral</title>
   </head>
   <body>
     <nav id="sidebar">
-        <div id="user">
-            <img src="./src/images/charizard_4ndredev21.jfif" id="user_avatar" alt="charizard do treinador 4ndredev21">
-        </div>
+      <div id="user">
+        <img
+          src="./src/images/charizard_4ndredev21.jfif"
+          id="user_avatar"
+          alt="charizard do treinador 4ndredev21"
+          width="200px"
+        />
+
+        <p id="user_infos">
+          <span class="item_description"> CHARIDEV</span>
+          <span class="item_description"
+            >O pokémon preferido do treinador 4ndredev21 , um dos mais fortes e
+            habilidosos pokémons, tem ataques devastadores e também é muito
+            resistente!</span
+          >
+        </p>
+      </div>
+      <ul id="side_items">
+        <li class="side_item">
+          <a href="#"
+            ><i class="fa-solid fa-chart-simple"></i>
+            <span class="item_description"> STATS </span></a
+          >
+        </li>
+        <li class="side_item">
+          <a href="#"
+            ><i class="fa-solid fa-bolt"></i>
+            <span class="item_description"> HABILIDADES </span></a
+          >
+        </li>
+        <li class="side_item">
+          <a href="#"
+            ><i class="fa-solid fa-meteor"></i>
+            <span class="item_description"> MOVE TUTORS </span></a
+          >
+        </li>
+        <li class="side_item">
+          <a href="#"
+            ><i class="fa-solid fa-meteor"></i>
+            <span class="item_description"> MOVE TUTORS </span></a
+          >
+        </li>
+      </ul>
     </nav>
     <script src="./src/scripts/script.js"></script>
   </body>
