--- a/index.html
+++ b/index.html
@@ -16,49 +16,59 @@
   </head>
   <body>
     <nav id="sidebar">
-      <div id="user">
-        <img
-          src="./src/images/charizard_4ndredev21.jfif"
-          id="user_avatar"
-          alt="charizard do treinador 4ndredev21"
-          width="200px"
-        />
+      <div id="sidebar_content">
+        <div id="user">
+          <img
+            id="user_avatar"
+            src="./src/images/charizard_4ndredev21.jfif"
+            alt="charizard do treinador 4ndredev21"
+          />
 
-        <p id="user_infos">
-          <span class="item_description"> CHARIDEV</span>
-          <span class="item_description"
-            >O pokémon preferido do treinador 4ndredev21 , um dos mais fortes e
-            habilidosos pokémons, tem ataques devastadores e também é muito
-            resistente!</span
-          >
-        </p>
+          <p id="user_infos">
+            <span class="item_description"> CHARIDEV</span>
+            <span class="item_description"
+              >O pokémon preferido do treinador 4ndredev21 , um dos mais fortes
+              e habilidosos pokémons, tem ataques devastadores e também é muito
+              resistente!</span
+            >
+          </p>
+        </div>
+        <ul id="side_items">
+          <li class="side_item">
+            <a href="#"
+              ><i class="fa-solid fa-chart-simple"></i>
+              <span class="item_description"> STATS </span></a
+            >
+          </li>
+          <li class="side_item">
+            <a href="#"
+              ><i class="fa-solid fa-bolt"></i>
+              <span class="item_description"> HABILIDADES </span></a
+            >
+          </li>
+          <li class="side_item">
+            <a href="#"
+              ><i class="fa-solid fa-meteor"></i>
+              <span class="item_description"> MOVE TUTORS </span></a
+            >
+          </li>
+          <li class="side_item">
+            <a href="#"
+              ><i class="fa-solid fa-heart-circle-minus"></i>
+              <span class="item_description"> AFINIDADE </span></a
+            >
+          </li>
+        </ul>
+        <button id="open_btn">
+          <i id="open_btn_icon" class="fa-solid fa-circle-chevron-right"></i>
+        </button>
       </div>
-      <ul id="side_items">
-        <li class="side_item">
-          <a href="#"
-            ><i class="fa-solid fa-chart-simple"></i>
-            <span class="item_description"> STATS </span></a
-          >
-        </li>
-        <li class="side_item">
-          <a href="#"
-            ><i class="fa-solid fa-bolt"></i>
-            <span class="item_description"> HABILIDADES </span></a
-          >
-        </li>
-        <li class="side_item">
-          <a href="#"
-            ><i class="fa-solid fa-meteor"></i>
-            <span class="item_description"> MOVE TUTORS </span></a
-          >
-        </li>
-        <li class="side_item">
-          <a href="#"
-            ><i class="fa-solid fa-meteor"></i>
-            <span class="item_description"> MOVE TUTORS </span></a
-          >
-        </li>
-      </ul>
+      <div id="logout">
+        <button id="logout_btn">
+          <i class="fa-solid fa-right-from-bracket"></i>
+          <span id="item_description">LOGOUT</span>
+        </button>
+      </div>
     </nav>
     <script src="./src/scripts/script.js"></script>
   </body>
