adicionado umas quebras de linhas com a tag br para os textos se adaptarem e também melhorias no documento css como height 100vh , background FFFFFF para distinguir as cores

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           />
 
           <p id="user_infos">
-            <span class="item_description"> CHARIDEV</span>
+            <span class="item_description"> CHARIDEV</span><br>
             <span class="item_description"
-              >O pokémon preferido do treinador 4ndredev21 , um dos mais fortes
-              e habilidosos pokémons, tem ataques devastadores e também é muito
+              >O pokémon preferido do treinador 4ndredev21 ,<br> um dos mais fortes
+              e habilidosos pokémons,<br> tem ataques devastadores e também é muito br
               resistente!</span
             >
           </p>
@@ -70,6 +70,9 @@
         </button>
       </div>
     </nav>
+    <main>
+        <h1>TITULO</h1>
+    </main>
     <script src="./src/scripts/script.js"></script>
   </body>
 </html>
