--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           />
 
           <p id="user_infos">
-            <span class="item_description"> CHARIDEV</span><br>
+            <span class="item_description"> CHARIDEV</span>
             <span class="item_description"
               >O pokémon preferido do treinador 4ndredev21 ,<br> um dos mais fortes
-              e habilidosos pokémons,<br> tem ataques devastadores e também é muito br
+              e habilidosos pokémons,<br> tem ataques devastadores e também é muito
               resistente!</span
             >
           </p>
