adicionado estilizações do projeto ao css , é possível ver quais , clicando no github e em commits .. hovers , centralização , estilização dos ícones e etcs

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           <p id="user_infos">
             <span class="item_description"> CHARIDEV</span>
             <span class="item_description"
-              >O pokémon preferido do treinador 4ndredev21 ,<br> um dos mais fortes
-              e habilidosos pokémons,<br> tem ataques devastadores e também é muito
-              resistente!</span
+              >O pokémon preferido do treinador 4ndredev21 ,<br />
+              um dos mais fortes e habilidosos pokémons,<br />
+              tem ataques devastadores e também é muito resistente!</span
             >
           </p>
         </div>
         <ul id="side_items">
-          <li class="side_item">
+          <li class="side_item active">
             <a href="#"
               ><i class="fa-solid fa-chart-simple"></i>
               <span class="item_description"> STATS </span></a
@@ -71,7 +71,7 @@
       </div>
     </nav>
     <main>
-        <h1>TITULO</h1>
+      <h1>TITULO</h1>
     </main>
     <script src="./src/scripts/script.js"></script>
   </body>
